Include TS typings

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@mknapik/rxjs-extensions",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "git@gitlab.com:mknapik/rxjs-extensions.git",
   "author": "Michał Knapik",
   "license": false,
